[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
comrak = { version = "0.19.0", default-features = false }
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "fs"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["normalize-path", "cors"] }
