[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.6.20", features = ["ws"] }
chrono = { version = "0.4.31", features = ["serde"] }
comrak = { version = "0.19.0", default-features = false }
image = "0.24.7"
new_mime_guess = "4.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.2"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "time",
] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
    "normalize-path",
    "cors",
    "compression-br",
] }
urlencoding = "2.1.3"
